@@ -1,25 +1,0 @@
-distro-info
-===========
-
-The distro-info package provides centralised lists of code-names and release
-history for the supported distributions (Currently: Debian and Ubuntu).
-The distro-info-data (in the distro-info-data package) can be updated once,
-and all the packages using it will have the latest data. This avoids having to
-hard-code current development release names (and other such volatile data)
-into packages.
-
-Outdated Data Errors
-====================
-
-If you get an error that the package data is out of date, look for a newer
-distro-info-data package in your distribution's updates.
-
-On Debian, this is:
-deb http://ftp.debian.org/debian stable-updates main
-
-On Ubuntu, it is:
-deb http://archive.ubuntu.com/ubuntu $RELEASE-updates main
-where $RELEASE is the name of your release.
-
-If there isn't an update available yet, you should be able to install the
-latest version from Debian/unstable.
