@@ -32,7 +32,7 @@
 
 #define OUTDATED_ERROR "Distribution data outdated.\n" \
     "Please check for an update for distro-info-data. " \
-    "See /usr/share/doc/distro-info/README.Debian for details."
+    "See /usr/share/doc/distro-info-data/README.Debian for details."
 
 typedef struct {
     unsigned int year;
